- Issue #2407083 by petterw03: Add support for medium sized icons (20x20) [#2407083]
- Issue #2505439 by julka: update Twitter settings to use supported variables (addthis_config.passthrough.twitter.via and addthis_config.passthrough.twitter.text instead of addthis_config.templates.twitter)

Github merges

- Issue #6 Changing default toolbox buttons on fields.
- Issue #8 Minor fixes in whitespace and use of empty method.

# 7.x-4.0-alpha6
Use update.php to rebuild the registry because of class changes.
If that does not work use the rebuild_registry module.

More importantly classes have been restructured and javascript loading
has been redesigned.

- Restructured test classes.
- Restructured the way widget.js is included, how loading is done and
  how the addthis.js behaves.
  - The addthis.js is always loaded but is used as a library instead of
    executing everything directly like it was before.
  - The include of AddThisJson and AddThisWidgetJs in AddThis::getInstance()
    where removed because they should be autoloaded from the register.

  Restructuring classes.
  - In general the AddThis class has become a sort of module file that contains
    all kinds of addthis related functions. This is bad design and therefore step
    by step things are refactored. This breaks API but no official rc or release
    has been given out yet.
  - Classes are structured now in folders in a way namespace could be organised.
    Because PHP 5.2 does not support namespaces we only use classes but the
    structure is already there for future portability.
  - AddThisScriptManager is added as a Service. This handles the attachment of
    js and settings when needing addthis or widgets on your page. The AddThis->addWidgetJs,
    AddThis->includeWidgetJs and AddThis->addConfigurationOptionsJs where
    removed in favor of the AddThisScriptManager functionality.
  - AddThisJson is moved to the Util directory.